--- a/content/resources/6-892s04-th.md
+++ b/content/resources/6-892s04-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/6-892-computational-models-of-discourse-spring-2004/aba91242d24e1ba049f58b01b20b880e_6-892s04-th.jpg
+file: /courses/6-892-computational-models-of-discourse-spring-2004/aba91242d24e1ba049f58b01b20b880e_6-892s04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Cherokee Alphabet. (Image courtesy of the [Clinton White House Web site](http://clinton4.nara.gov/).)
@@ -13,3 +13,5 @@ resourcetype: Image
 title: 6-892s04-th.jpg
 uid: aba91242-d24e-1ba0-49f5-8b01b20b880e
 ---
+New image Upload
+
