Sync all content

--- a/content/resources/6-892s04-th.md
+++ b/content/resources/6-892s04-th.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: ''
   image-alt: Cherokee alphabet.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 6-892s04-th.jpg
 uid: aba91242-d24e-1ba0-49f5-8b01b20b880e
 ---
 New image Upload
-
