--- a/content/resources/6-892s04.md
+++ b/content/resources/6-892s04.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: ''
   image-alt: Cherokee alphabet.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 6-892s04.jpg
 uid: ca094bc6-0706-2eb5-d302-ce76306b7514
 ---
 Cherokee Alphabet. (Image courtesy of the Clinton White House Web site.)
-
