--- a/content/resources/6-892s04.md
+++ b/content/resources/6-892s04.md
@@ -1,10 +1,12 @@
 ---
 content_type: resource
 description: Cherokee Alphabet. (Image courtesy of the Clinton White House Web site.)
+draft: false
 file: /courses/6-892-computational-models-of-discourse-spring-2004/ca094bc607062eb5d302ce76306b7514_6-892s04.jpg
+file_size: 124960
 file_type: image/jpeg
 image_metadata:
-  caption: Cherokee Alphabet. (Image courtesy of the [Clinton White House Web site](http://clinton4.nara.gov/).)
+  caption: Cherokee Alphabet. (Image courtesy of the [Clinton White House Web site](https://clinton.presidentiallibraries.us/collections/show/18).)
   credit: ''
   image-alt: Cherokee alphabet.
 learning_resource_types: []
@@ -13,5 +15,15 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 6-892s04.jpg
 uid: ca094bc6-0706-2eb5-d302-ce76306b7514
+video_files:
+  archive_url: ''
+  video_captions_file: ''
+  video_thumbnail_file: ''
+  video_transcript_file: ''
+video_metadata:
+  video_speakers: ''
+  video_tags: ''
+  youtube_description: ''
+  youtube_id: ''
 ---
 Cherokee Alphabet. (Image courtesy of the Clinton White House Web site.)
