Sync all content

--- a/content/resources/6-892s04-th.md
+++ b/content/resources/6-892s04-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/6-892-computational-models-of-discourse-spring-2004/aba91242d24e1ba049f58b01b20b880e_6-892s04-th.jpg
+file_size: 7003
 file_type: image/jpeg
 image_metadata:
   caption: Cherokee Alphabet. (Image courtesy of the [Clinton White House Web site](http://clinton4.nara.gov/).)
