Sync all content

--- a/content/resources/6-892s04.md
+++ b/content/resources/6-892s04.md
@@ -6,7 +6,8 @@ file: /ol-ocw-studio-app/courses/6-892-computational-models-of-discourse-spring-
 file_size: 124960
 file_type: image/jpeg
 image_metadata:
-  caption: Cherokee Alphabet. (Image courtesy of the [Clinton White House Web site](https://clinton.presidentiallibraries.us/collections/show/18).)
+  caption: Cherokee Alphabet. (Image courtesy of the {{% resource_link "d98b77aa-0287-47d2-8ea1-ce154d0c69a8"
+    "Clinton White House Web site" %}}.)
   credit: ''
   image-alt: Cherokee alphabet.
 learning_resource_types: []
