--- a/content/resources/6-892s04-th.md
+++ b/content/resources/6-892s04-th.md
@@ -5,7 +5,8 @@ file: /ol-ocw-studio-app/courses/6-892-computational-models-of-discourse-spring-
 file_size: 7003
 file_type: image/jpeg
 image_metadata:
-  caption: Cherokee Alphabet. (Image courtesy of the [Clinton White House Web site](http://clinton4.nara.gov/).)
+  caption: Cherokee Alphabet. (Image courtesy of the {{% resource_link "332316f2-07b7-4298-ad29-75d090f2a491"
+    "Clinton White House Web site" %}}.)
   credit: ''
   image-alt: Cherokee alphabet.
 learning_resource_types: []
